// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup [common] example testing should match snapshot(s) for Default 1`] = `
<ButtonGroup
  selectedIndices={
    Array [
      1,
      2,
    ]
  }
>
  <ButtonGroup.Button
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Smol
  </ButtonGroup.Button>
  <ButtonGroup.Button
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Lonnnnnnnng
  </ButtonGroup.Button>
  <ButtonGroup.Button
    style={
      Object {
        "width": "100px",
      }
    }
  >
    Medium
  </ButtonGroup.Button>
</ButtonGroup>
`;

exports[`ButtonGroup [common] example testing should match snapshot(s) for Stateful 1`] = `
<ButtonGroup>
  <ButtonGroup.Button>
    Zero
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    One
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Two
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Three
  </ButtonGroup.Button>
</ButtonGroup>
`;

exports[`ButtonGroup [common] example testing should match snapshot(s) for Stateless 1`] = `
<ButtonGroup
  selectedIndices={
    Array [
      7,
      8,
    ]
  }
>
  <ButtonGroup.Button>
    Zero
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    One
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Two
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Three
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Four
  </ButtonGroup.Button>
  <ButtonGroup.Button
    isDisabled={true}
  >
    Five
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Six
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Seven
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Eight
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Nine
  </ButtonGroup.Button>
</ButtonGroup>
`;
